# ITSxRust

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker-ghcr.yml  docker-publish.yml
bench/: BENCHMARKING.MD  README.md  collect_results.py  run_benchmark.sh  smoke_test.sh
bench/sim/: 01_build_references.py  02_simulate_reads.sh  03_run_tools.sh  04_eval_boundaries.py  05_eval_classification.sh  06_tabulate.py  run_all.sh  run_hifi_eval.sh
data/figures/: fig1_bench_threads.sh  fig1_thread_scaling.py  fig3_boundary_errors.py  fig4_pipeline.py  fig_boundary_errors_like_ont_v2.py
src/: derep.rs  fasta.rs  fastq.rs  hmmer.rs  main.rs  preset.rs  report.rs  select.rs  seq.rs  tblout.rs  trim.rs
testdata/: stream.tblout  subset.anchors.jsonl  subset.anchors.tsv  subset.fasta  subset.full.fasta  subset.its1.fasta  subset.its2.fasta  test.fasta
tests/: extract_subset_from_tblout.rs
