[package]
name = "itsxrust"
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ayobi/ITSxRust"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.10"
csv = "1.3"
flate2 = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

